--- a/src/assets/styles/global.css
+++ b/src/assets/styles/global.css
@@ -34,3 +34,9 @@
 .el-tree-node:focus > .el-tree-node__content {
   box-shadow: inset -1px 0 #e1e1e1;
 }
+
+pre[class*='language-'] {
+  padding: 0 1em;
+  line-height: 0;
+  overflow: hidden;
+}
